<resources>
    <string name="app_name">Downloads Folder Explorer</string>

    <string name="files_management">Files Management</string>
    <string name="folder_management">Folder Management</string>

    <string name="buat_file">Buat file</string>
    <string name="ubah_file">Ubah file</string>
    <string name="hapus_file">Hapus file</string>
    <string name="hasil_baca_file">Hasil Baca File</string>
    <string name="baca_file">Baca file</string>

    <string name="buat_folder">Buat Folder</string>
    <string name="hapus_folder">Hapus Folder</string>
    <string name="update_folder">Update Folder</string>


</resources>